--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -35,11 +35,12 @@ jobs:
               uses: actions/checkout@v1
 
             # Setup gcloud CLI
-            - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+            - name: Setup Cloud SDK
+              uses: google-github-actions/setup-gcloud@v0.2.0
               with:
-                  version: '275.0.0'
-                  service_account_email: ${{ secrets.SA_EMAIL }}
-                  service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+                project_id: ${{ env.PROJECT_ID }}
+                service_account_key: ${{ secrets.GCP_SA_KEY }}
+                  
 
             # Configure gcloud CLI
             - name: gcloud Set up
@@ -50,9 +51,10 @@ jobs:
               run: |
                   gcloud builds submit -t gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA
             # Deploy image to Cloud Run
-            - name: Deploy
-              run: |
-                  gcloud run deploy $SERVICE_NAME \
-                    --region $RUN_REGION \
-                    --image gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA \
-                    --platform managed
+            - name: Deploy to Cloud Run
+              run: |-
+                gcloud run deploy $SERVICE \
+                  --region $REGION \
+                  --image gcr.io/$PROJECT_ID/$SERVICE \
+                  --platform managed \
+                  --set-env-vars NAME="Hello World"
