--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -23,7 +23,7 @@ on:
 env:
     PROJECT_ID: ${{ secrets.PROJECT_ID }}
     RUN_REGION: us-central1
-    SERVICE_NAME: super-simple-service
+    SERVICE_NAME: super-simple-service2
 
 jobs:
     setup-build-deploy:
@@ -55,7 +55,7 @@ jobs:
               id: deploy
               uses: google-github-actions/deploy-cloudrun@main
               with:
-                service: hello-cloud-run 
+                service: test1 
                 image: gcr.io/cloudrun/hello
                 credentials: ${{ secrets.GCP_SA_KEY }}
 
