--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -56,7 +56,7 @@ jobs:
               uses: google-github-actions/deploy-cloudrun@main
               with:
                 service: test1 
-                image: gcr.io/cloudrun/hello
+                image: gcr.io/my-playground-314114/cloud-test
                 credentials: ${{ secrets.GCP_SA_KEY }}
 
             - name: Use Output
