--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -19,12 +19,6 @@ on:
         branches:
             - main
 
-# Environment variables available to all jobs and steps in this workflow
-env:
-    PROJECT_ID: ${{ secrets.PROJECT_ID }}
-    RUN_REGION: us-central1
-    SERVICE_NAME: super-simple-service2
-
 jobs:
     setup-build-deploy:
         name: Setup, Build, and Deploy
@@ -33,31 +27,12 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v1
-
-            # Setup gcloud CLI
-            - name: Setup Cloud SDK
-              uses: google-github-actions/setup-gcloud@v0.2.0
+              
+            - id: deploy
+              uses: google-github-actions/deploy-appengine@main
               with:
-                project_id: ${{ env.PROJECT_ID }}
-                service_account_key: ${{ secrets.GCP_SA_KEY }}
-                  
+                credentials: ${{ secrets.gcp_credentials }}
 
-            # Configure gcloud CLI
-            - name: gcloud Set up
-              run: |
-                  gcloud config set project $PROJECT_ID
-            # Build and push image to Google Container Registry
-            - name: Build
-              run: |
-                  gcloud builds submit -t gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA
-            # Deploy image to Cloud Run
-            - name: Deploy to Cloud Run
-              id: deploy
-              uses: google-github-actions/deploy-cloudrun@main
-              with:
-                service: test1 
-                image: gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SH
-                credentials: ${{ secrets.GCP_SA_KEY }}
-
-            - name: Use Output
+            # Example of using the output
+            - id: test
               run: curl "${{ steps.deploy.outputs.url }}"
