--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -31,7 +31,7 @@ jobs:
             - id: deploy
               uses: google-github-actions/deploy-appengine@main
               with:
-                credentials: ${{ secrets.gcp_credentials }}
+                credentials: ${{ secrets.GCP_CREDENTIALS }}
 
             # Example of using the output
             - id: test
