--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -1,38 +1,24 @@
-# Copyright 2019 Google, LLC.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-name: Build and Deploy to Cloud Run
-
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - example
+
+name: Deploy to Google App Engine
 
 jobs:
-    setup-build-deploy:
-        name: Setup, Build, and Deploy
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v1
-              
-            - id: Deploy
-              uses: google-github-actions/deploy-appengine@main
-              with:
-                credentials: ${{ secrets.GCP_SA_KEY }}
+      - name: Deploy to App Engine
+        id: deploy
+        uses: google-github-actions/deploy-appengine@v0.2.0
+        with:
+          deliverables: example-app/app.yaml
+          project_id: ${{ secrets.GCP_PROJECT }}
+          credentials: ${{ secrets.GCP_SA_KEY }}
 
-            # Example of using the output
-            - id: test
-              run: curl "${{ steps.deploy.outputs.url }}"
+      - name: Show Output
+        run: echo ${{ steps.deploy.outputs.url }}
